<resources>
    <string name="app_name">if(kakao)2021</string>
    <string name="main_background_image">메인 배경 이미지</string>
    <string name="main_bye_gif">메인 손 흔드는 gif</string>
    <string name="main_bye_message">if(kakao)2021이\n여러분의 관심 속에 마무리되었습니다.\n우리, 내년에 또 만나요\n함께 나아가는 더 나은 세상!</string>
    <string name="highlight_title">Highlight</string>
    <string name="show_all_session">전체세션 보기</string>
    <string name="history_2020">if(kakao)2020 보기</string>
    <string name="kakao_corp">kakao corp.</string>
    <string name="session_thumbnail_image">세션 썸네일 이미지</string>
    <string name="toolbar_menu_image">메뉴 버튼</string>
    <string name="contact">문의하기</string>
    <string name="contact_talk_channel">ifkakao(톡채널)</string>
    <string name="contact_email">ifkakao@kakao.com</string>
    <string name="menu_session">Session</string>
    <string name="menu_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speaker_profile_image">발표자 프로필 이미지</string>
    <string name="relation_session_title">연관세션</string>
    <string name="filter_clear">초기화</string>
    <string name="filter_apply">적용</string>
    <string name="filter_close_button">필터 화면 닫기 버튼</string>
    <string name="interest_field">관심분야</string>
    <string name="field_service">서비스</string>
    <string name="field_business">비즈니스</string>
    <string name="field_tech">기술</string>
    <string name="interest_keyword">관심키워드</string>
    <string name="keyword_service_business">서비스·비즈니스</string>
    <string name="keyword_platform">플랫폼</string>
    <string name="keyword_commerce">커머스</string>
    <string name="keyword_b2b">B2B</string>
    <string name="keyword_subscribe">구독</string>
    <string name="keyword_ads"><![CDATA[광고&마케팅]]></string>
    <string name="keyword_fintech">핀테크</string>
    <string name="keyword_digital">디지털 자산</string>
    <string name="keyword_content">콘텐츠</string>
    <string name="keyword_creator">크리에이터</string>
    <string name="keyword_esg">ESG</string>
    <string name="keyword_partner">파트너성장</string>
    <string name="keyword_social_impact">소셜임팩트</string>
    <string name="comment_finished">댓글 참여가 마감되었습니다.</string>
    <string name="keyword_company">공동체</string>
    <string name="session_favorite_button">세션 좋아요 버튼</string>
    <string name="go_up_button">위로 가기 버튼</string>
</resources>